# aegis-silentium

./: .env.example  README.md  conftest.py  docker-compose-ha.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml
c2/: Dockerfile  Dockerfile.hardened  __main__.py  app.py  circuit.py  db_module.py  logging_cfg.py  ops_registry.py  ratelimit.py
c2/auth/: mtls.py  rbac.py
c2/campaign/: __init__.py
c2/cluster/: coordinator.py
c2/consensus/: __init__.py  raft.py  state_machine.py
c2/db/: pool.py
c2/distributed/: __init__.py  anti_entropy.py  chaos.py  consistent_hash.py  crdt.py  dead_letter.py  fencing.py  gossip.py  hlc.py  lease.py  lock_manager.py  merkle.py  (+7 more)
configs/: aegis.conf  relay1.yaml  relay2.yaml  relay3.yaml  silentium.conf
dashboard/: Dockerfile  app.py  dashboard.html  stream_reader.py
deployment/: alert_rules.yml  docker-compose.silentium.yml  init.sql  prometheus.yml
docs/: AUTH_MODEL.md  CHANGELOG_v10.md  CHANGELOG_v11.md  CHANGELOG_v12.md  TERMUX_QUICKSTART.md  api_reference.md  developer_guide.md  governance.md  installation.md  operator_manual.md  troubleshooting.md
implant/: build.sh  go.mod  main.go
node/: Dockerfile  __init__.py  aegis_core.py  app.py
relay/: Dockerfile  go.mod  go.sum  main.go
scheduler/: Dockerfile  app.py  retention.py
scripts/: add_target.sh  build.sh  check_config.py  gen_certs.sh  gen_keys.sh  inject_objective.sh  run.sh  setup_wireguard.sh  standalone.sh  test_relay.sh
wireguard/: README.md  wg0.conf.template
(+167 files in other folders)
